# chinese-chess

./: .gitignore  Cargo.toml  proto.md  todo.md
arbiter/: Cargo.toml
arbiter/src/: main.rs
chess/: Cargo.toml
chess/src/: main.rs
frontend/: Cargo.toml  protocol.md
frontend/src/: lib.rs  line_stream.rs  protocol.rs  tournament.rs
frontend/src/arbiter/: control.rs  main.rs  mod.rs
frontend/src/arbiter/tournament/: instance.rs  mod.rs  player.rs  status.rs
frontend/src/human/: main.rs
frontend/src/player/: main.rs
src/: board.rs  display_format.rs  game.rs  lib.rs  location.rs  main.rs  piece.rs  ranker.rs
