[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "arbiter"
path = "src/arbiter/main.rs"

[[bin]]
name = "player"
path = "src/player/main.rs"

[dependencies]
chinese-chess = { path = ".." }
rand = "0.9.2"
clap = { version = "4.5.54", features = ["derive"] }
smol = "2.0.2"
log = "0.4.29"
env_logger = "0.11.8"
chrono = "0.4.42"
